# SGCS

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  install.sh  main.cpp
SGCSApp/: CMakeLists.txt  main.cpp
cmake/: FindBoost.cmake  FindYaml.cmake  GitVersion.cmake
libSGCS/: CMakeLists.txt  Connection.cpp  Connection.h  ConnectionRouter.cpp  ConnectionThread.cpp  GCSRTK.cpp  GCSRTK.h  GCSStatus.cpp  GCSStatus.h  MainWindow.cpp  MainWindow.h  RunConfiguration.cpp  RunConfiguration.h  SGCS.cpp  SGCS.h  SerialConnection.cpp  SerialConnection.h  SerialConnectionFabric.cpp  SerialConnectionFabric.h  SerialConnectionSelectorListModel.cpp  SerialConnectionSelectorListModel.h  UavFabric.cpp  UavFabric.h  UavMessage.cpp  UavMessage.h  UavObject.cpp  UavObject.h  UavProtocol.cpp  UavProtocol.h  WindowConf.cpp  WindowConf.h  resource.qrc  resourcelibsgcs.qrc  version.h  version.h.in
libSGCS/config/: RunConfiguration.cpp  RunConfiguration.h
libSGCS/connection/: Connection.cpp  Connection.h  ConnectionRouter.cpp  ConnectionRouter.h  ConnectionThread.cpp  ConnectionThread.h  UavProtocol.cpp  UavProtocol.h
libSGCS/connection/serial/: SerialConnectionFabric.cpp  SerialConnectionFabric.h
libSGCS/plugins/: DataSourcePlugin.cpp  DataSourcePlugin.h  LeafInterface.cpp  LeafInterface.h  LeafPlugin.cpp  LeafPlugin.h  PluginInterface.h  PluginLoader.cpp  PluginLoader.h  PluginsLoader.cpp  PluginsLoader.h  ProtocolPlugin.cpp  ProtocolPlugin.h  SgcsPlugins.cpp  SgcsPlugins.h
libSGCS/qml/: Connection.qml  ConnectionSerial.qml  MainWindow.qml  UavInstance.qml
libSGCS/ui/: Connection.qml  MainWindow.cpp  MainWindow.h  MainWindow.qml  MapView.qml  PluginLoader.qml
libTools/: CMakeLists.txt  CharMap.cpp  CharMap.h  IOObject.h  Optional.h
libTools/geo/: Coords3D.h
libUAV/: AHRS.cpp  AHRS.h  CMakeLists.txt  Calibration.cpp  Calibration.h  GPS.cpp  GPS.h  Home.cpp  Home.h  Mission.cpp  Mission.h  Position.cpp  Position.h  Power.cpp  Power.h  Speed.cpp  Speed.h  Status.cpp  Status.h  UAV.cpp  UAV.h  UavFabric.h  UavMessage.cpp  UavMessage.h  UavObject.cpp  UavObject.h  UavProtocol.cpp  UavProtocol.h
plugins/: CMakeLists.txt
plugins/PluginIPConnection/: CMakeLists.txt  DoublePipe.cpp  DoublePipe.h  IPConfig.cpp  IPConfig.h  IPConnection.cpp  IPConnection.h  IPInterface.cpp  IPInterface.h  IPInterfaceTCPClient.cpp  IPInterfaceTCPClient.h  IPInterfaceUDPClient.cpp  IPInterfaceUDPClient.h  IPInterfaceUDPServer.cpp  IPInterfaceUDPServer.h  PluginIPConnection.cpp  PluginIPConnection.h  meta.json
plugins/PluginMavlink/: AutopilotAPMImpl.cpp  AutopilotAPMImpl.h  AutopilotPixhawkImpl.cpp  AutopilotPixhawkImpl.h  CMakeLists.txt  IAutopilot.cpp  IAutopilot.h  MavlinkConfig.cpp  MavlinkConfig.h  MavlinkHelper.h  MavlinkProtocol.cpp  MavlinkProtocol.h  PluginMavlink.cpp  PluginMavlink.h  meta.json
plugins/PluginMavlink/impl/: UavObjectMav.cpp  UavObjectMav.h
plugins/PluginSerialConnection/: CMakeLists.txt  PluginSerialConnection.cpp  PluginSerialConnection.h  SerialConfig.cpp  SerialConfig.h  SerialConnection.cpp  SerialConnection.h
plugins/pluginSerialConnection/: CMakeLists.txt  PluginSerialConnection.cpp  PluginSerialConnection.h  SerialConnectionView.qml  serialConnectionResource.qrc
