CMAKE_MINIMUM_REQUIRED(VERSION 3.16.0)
PROJECT(SGCS)
IF(WIN32)
    SET(CMAKE_FIND_LIBRARY_PREFIXES "")
    SET(CMAKE_FIND_LIBRARY_SUFFIXES ".lib" ".dll")
ELSE()
    SET(CMAKE_FIND_LIBRARY_PREFIXES "lib")
    SET(CMAKE_FIND_LIBRARY_SUFFIXES ".so" ".a")
ENDIF()
LIST(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)

SET(CMAKE_CXX_STANDARD 20)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Werror -std=c++11 -fstrict-aliasing  -Wno-deprecated-declarations -Wno-unused-variable")
# core libraries
ADD_SUBDIRECTORY(libTools)
ADD_SUBDIRECTORY(libUAV)
ADD_SUBDIRECTORY(libSGCS)
ADD_SUBDIRECTORY(SGCSApp)

# search plugins and add to project
FILE(GLOB PLUGINS_PATH "plugins/*")
FOREACH(file ${PLUGINS_PATH})
    ADD_SUBDIRECTORY(${file})
ENDFOREACH()
# search plugins_contrib and add to project
FILE(GLOB PLUGINS_CONTRIB_PATH "plugins_contrib/*")
FOREACH(file ${PLUGINS_CONTRIB_PATH})
    IF (EXISTS ${file}/CMakeLists.txt )
        ADD_SUBDIRECTORY(${file})
    ENDIF()
ENDFOREACH()
