CMAKE_MINIMUM_REQUIRED(VERSION 3.16.0)

PROJECT(SGCSApp LANGUAGES CXX)

SET(CMAKE_AUTOMOC ON)
SET(CMAKE_CXX_STANDARD 20)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/../bin )

FIND_PACKAGE(Qt5 COMPONENTS Core REQUIRED)
FIND_PACKAGE(Qt5 COMPONENTS Location REQUIRED)

# add srcs
SET(SRC_LIST
    main.cpp
    )

#create exec
ADD_EXECUTABLE(${PROJECT_NAME} ${SRC_LIST})

#link
TARGET_LINK_LIBRARIES(${PROJECT_NAME} LINK_PUBLIC SGCS)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} LINK_PUBLIC UAV)

SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES AUTOMOC ON)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} PUBLIC Qt5::Core)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} PUBLIC Qt5::Location)
