CMAKE_MINIMUM_REQUIRED(VERSION 3.16.0)
PROJECT(Tools LANGUAGES CXX)

SET(CMAKE_CXX_STANDARD 20)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/../bin )

# add srcs
SET(SRC_LIST
    geo/Coords3D.cpp
    )
SET(HEADER_LIST
    geo/Coords3D.h
    Optional.h
    )

ADD_LIBRARY(${PROJECT_NAME} SHARED ${SRC_LIST} ${HEADER_LIST})

TARGET_INCLUDE_DIRECTORIES (${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
