CMAKE_MINIMUM_REQUIRED(VERSION 3.16.0)
PROJECT(PluginSerialConnection LANGUAGES CXX)

SET(CMAKE_CXX_STANDARD 20)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
SET(CMAKE_AUTOMOC ON)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/../plugins )

FIND_PACKAGE(Qt5 COMPONENTS Core REQUIRED)
FIND_PACKAGE(Qt5 COMPONENTS Location REQUIRED)

# add srcs
SET(SRC_LIST
    PluginSerialConnection.cpp
    SerialConnection.cpp
    SerialConfig.cpp
    )
SET(HEADER_LIST
    PluginSerialConnection.h
    SerialConnection.h
    SerialConfig.h
    )
SET(OTHER_FILES
    meta.json
)

ADD_LIBRARY(${PROJECT_NAME} SHARED ${SRC_LIST} ${HEADER_LIST} ${OTHER_FILES})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} LINK_PUBLIC SGCS)

SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES AUTOMOC ON)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} PUBLIC Qt5::Core)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} PUBLIC Qt5::Location)
