CMAKE_MINIMUM_REQUIRED(VERSION 3.16.0)
PROJECT(PluginSerialConnection LANGUAGES CXX)

SET(CMAKE_CXX_STANDARD 20)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/../../bin/plugins )

FIND_PACKAGE(Boost)

# add srcs
SET(SRC_LIST
    PluginSerialConnection.cpp
    SerialConnection.cpp
    SerialConfig.cpp
    )
SET(HEADER_LIST
    PluginSerialConnection.h
    SerialConnection.h
    SerialConfig.h
    )
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})

ADD_LIBRARY(${PROJECT_NAME} SHARED ${SRC_LIST} ${HEADER_LIST})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} LINK_PUBLIC SGCS)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} PUBLIC ${Boost_LIBRARY_DIRS})

